samples/_failures_safe/1761201262_cf6b9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87ff5e5d.c: In function ‘main’:
./samples/SAFE/__tmp_87ff5e5d.c:198:5: error: expected expression at end of input
  198 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_87ff5e5d.c:198:5: error: expected declaration or statement at end of input
